# datasets

./: main.py  pyproject.toml
argendata_datasets/: __init__.py
argendata_datasets/analyze/: comparar_df.py
argendata_datasets/checksum/: __init__.py  _hash.py  _hashlib.py  digest.py  hash.py
argendata_datasets/datasource/static/: __init__.py  clean.py  raw.py  utils.py
argendata_datasets/dsl/: __init__.py  analyzer.py  datasets.py
argendata_datasets/dsl/analyzer/: __init__.py  analyzer.py  dataset_registrations.py
argendata_datasets/utils/product/: __init__.py  patterns.py  product.py
test/: test_checksum.py  test_dataset_registrations.py  test_datasources.py  test_dsl.py  test_product.py
