[project]
name = "argendata_datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]
test = [
    "matplotlib>=3.10.8",
    "polars>=1.35.2",
    "scipy>=1.17.0",
]
